--- a/hidden-figures-fitness/src/styles/About.css
+++ b/hidden-figures-fitness/src/styles/About.css
@@ -1,5 +1,8 @@
 /* General Styles */
 .about {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     padding: 20px;
     text-align: center;
   }
