--- a/hidden-figures-fitness/src/App.css
+++ b/hidden-figures-fitness/src/App.css
@@ -1,6 +1,13 @@
 body {
+  min-height: 100vh;
   font-family: Ariel, sans-serif;
   background-color: #f4f4f4;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  margin: 0;
 }
 
 img {
@@ -29,10 +36,14 @@ nav ul li {
 }
 
 footer {
+position: absolute;
+bottom: 0;
+  width:100%;
   background-color: #333;
   color: white;
   text-align: center;
-  padding: 1rem;
+ 
+  
 }
 
 footer a {
