--- a/hidden-figures-fitness/src/styles/Login.css
+++ b/hidden-figures-fitness/src/styles/Login.css
@@ -76,6 +76,17 @@ h2 {
     margin-top: 15px;
 }
 
+.logout-btn {
+    background-color: #FF5A81; /* Pink for Log Out */
+    color: white;
+    border: none;
+    padding: 0.75rem 1.5rem;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+  }
+  
+
 @media (max-width: 768px) {
     .login-form {
         padding: 15px;
