--- a/hidden-figures-fitness/src/styles/Login.css
+++ b/hidden-figures-fitness/src/styles/Login.css
@@ -85,6 +85,22 @@ h2 {
     cursor: pointer;
     font-size: 1rem;
   }
+
+  .signup-message {
+    margin-top: 20px;
+    font-size: 1rem;
+    color: #555;
+}
+
+.signup-message a {
+    color: #3498db;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.signup-message a:hover {
+    text-decoration: underline;
+}
   
 
 @media (max-width: 768px) {
